--- a/templates/index.pug
+++ b/templates/index.pug
@@ -1,6 +1,7 @@
 html
 	head
-		title In Development!
+		title とりあえず書いてみた
 		meta(charset="utf-8")
 	body
-		h1 Hello, World!!!!!!
+		h1 これが見出し
+		p ここkに本文を書き込む
