とりあえす更新しとこ

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -3,6 +3,8 @@ html
 		title とりあえず書いてみた
 		meta(charset="utf-8")
 	body
-		h1 これが見出し
+		h1 すげぇなこれ
 		p ここkに本文を書き込む
-		
+		p あびゃびゃびゃびゃびゃびゃ
+		p ふぁあああああああああああああああ
+		p ぐえぐえぐえぐえぐえぐえぐえぐえぐえぐえぐえ
